# palu-flask-labs

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: palu_labs.db
src/app/: main.py  routes.py
src/app/controllers/: home.py  items.py  routes.py
src/app/models/: database.py  items.py
src/app/templates/: head.html  index.html  items.html  menu.html  nav.html
tests/: test_item.py
