[build-system]
requires = ["setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "palu-labs"
version = "0.1.0"
description = "Palu Labs"
authors = ["Matheus Palu <my@email.com>"]
package-mode = false

[tool.poetry.dependencies]
flask = "^3.1.0"
flask_wtf = "^1.2.2"
gunicorn = "^23.0.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
pre-commit = "^4.1.0"
pylint = "^3.3.3"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[tool.black]
line-length = 80